# carpe-diem-service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
scripts/: sync_outlook_to_gmail.py
src/carpe_diem/: eds.py  main.py  models.py  scheduler.py
