[project]
name = "carpe-diem-service"
version = "0.1.0"
description = "A FastAPI sidecar for the Carpe Diem COSMIC applet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn", "sdbus", "icalendar"]

[dependency-groups]
dev = [
	"httpx>=0.28.1",
	"pytest>=9.0.2",
	"pytest-asyncio>=1.3.0",
	"pytest-mock>=3.15.1",
	"ruff>=0.14.10",
]

[tool.ruff]
# Set the maximum line length (standard is 88, matching Black)
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q"
