[project]
name = "carpe-diem-service"
version = "0.1.0"
description = "A FastAPI sidecar for the Carpe Diem COSMIC applet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sdbus",
    "icalendar",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "horadric-lib",
]

[dependency-groups]
dev = [
	"httpx>=0.28.1",
	"pytest>=9.0.2",
	"pytest-asyncio>=1.3.0",
	"pytest-mock>=3.15.1",
	"ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.uv.sources]
horadric-lib = { git = "https://github.com/ShahanM/horadric-lib" }
